[BugFix] fix issue that cause that hangout message overflow

--- a/webServer/client/assets/scss/_hangout.scss
+++ b/webServer/client/assets/scss/_hangout.scss
@@ -85,8 +85,8 @@ $shadow: 0 1px $shadow_radius #B2B2B2;
         }
         .hangoutMessages {
             height: $hangout-messages-height;
-            overflow: scroll;
-
+            overflow: auto;
+            word-break:break-all;
             .message {
                 .messageAvatar {
                     width: 60px;
